--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,66 @@
-body {
-    background-color: #2641c2;
-    color: #f9faf8;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    margin: 0px 
-    }
+a {
+  color: inherit;
+}
 
-    .header {
-align-items: center;
-    }
+body {
+  font-family: 'Nunito Sans', sans-serif;
+font-weight: bold;
+color: /* #b20909; */ black 
+}
+
+div {
+   /*border: 1px solid black; 
+   color: #b20909; */
+   
+}
+
+.header {
+  display: flex;
+  justify-content: space-evenly;
+  
+ gap: 20p;
+  font-size: 2em;
+  
+}
+.crest img {
+ width: 75%;
+ height: auto;
+}
+.name {
+  display: flex;
+  align-items: center;
+}
+.icons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+
+
+.navbar {
+  display: flex;
+  justify-content: space-evenly;
+  list-style-type: none;
+  font-size: 16px;
+  overflow: hidden;
+ 
     
+}
+
+.hero {
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  font-size: 2em;
+}
+
+.image-container {
+
+}
+.image-container img {
+  width: 100%;
+  height:auto
+}
